// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Language Tour — Functions & Application > function application 1`] = `
[
  {
    "codegenJS": "function main() {
  const v0 = closure_7;
  return v0;
}

function closure_7(x) {
  return x;
}
return main();
",
    "elaborated": "λ(x: Num) -> x",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"identity"}
[3] lambda {"variable":"x","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [6]
[4] lit {"value":{"type":"Atom","value":"Num"}}
[5] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[6] env
[7] closure
  :body -> [3]
  :env -> [6]",
    "ivl": "(forall ((x Real)) (= x x))",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &closure_7
      return v0
  fn closure_7(x) entry=entry
    entry:
      return x",
    "name": "identity",
    "normalized": "λ(x: Num) -> (closure: x -| Γ: x)",
    "solverTrace": "=== Formula ===
  (forall ((x Real)) (= x x))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  x=x -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Π(t1: Num) -> Num",
  },
  {
    "codegenJS": "function main() {
  const v0 = unknown;
  return v0;
}
return main();
",
    "elaborated": "λ(x: Num) -> λ(y: Num) -> FFI.$add x y",
    "error": "emit_erl: unknown function arity for "unknown"",
    "gram": "[1] root
  :entry -> [10]
[2] stmt:let {"variable":"add"}
[4] lit {"value":{"type":"Atom","value":"Num"}}
[6] lit {"value":{"type":"Atom","value":"Num"}}
[9] var:foreign {"name":"$add","arity":2}
[10] var:ref {"name":"$add"}
  :refers_to -> [9]
  :scope -> [2] {"level":0}
  :scope -> [10] {"level":1}",
    "ivl": "(forall ((x Real)) (forall ((y Real)) (and (= x x) (= y y))))",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &unknown
      return v0",
    "name": "add",
    "normalized": "λ(x: Num) -> (closure: λ(y: Num) -> FFI.$add x y -| Γ: x)",
    "solverTrace": "=== Formula ===
  (forall ((x Real)) (forall ((y Real)) (and (= x x) (= y y))))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  x=x -> residual
  x=y -> residual
  y=x -> residual
  y=y -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Π(t2: Num) -> Π(t3: Num) -> Num",
  },
  {
    "codegenJS": "function main() {
  const v0 = identity;
  const v1 = 42;
  const v2 = v0(v1);
  return v2;
}
return main();
",
    "elaborated": "identity 42",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"forty2"}
[3] app {"icit":"Explicit"}
  :arg -> [6]
  :func -> [5]
[4] var:free {"name":"identity"}
[5] var:ref {"name":"identity"}
  :refers_to -> [4]
  :scope -> [2] {"level":0}
[6] lit {"value":{"type":"Num","value":42}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = identity
      let v1 = 42
      let v2 = call *v0(v1)
      return v2",
    "name": "forty2",
    "normalized": "42",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Num",
  },
  {
    "codegenJS": "function main() {
  const v0 = add;
  const v1 = 10;
  const v2 = v0(v1);
  const v3 = 20;
  const v4 = v2(v3);
  return v4;
}
return main();
",
    "elaborated": "add 10 20",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"added"}
[3] app {"icit":"Explicit"}
  :arg -> [8]
  :func -> [4]
[4] app {"icit":"Explicit"}
  :arg -> [7]
  :func -> [6]
[5] var:free {"name":"add"}
[6] var:ref {"name":"add"}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
[7] lit {"value":{"type":"Num","value":10}}
[8] lit {"value":{"type":"Num","value":20}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = add
      let v1 = 10
      let v2 = call *v0(v1)
      let v3 = 20
      let v4 = call *v2(v3)
      return v4",
    "name": "added",
    "normalized": "30",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Num",
  },
]
`;

exports[`Language Tour — Functions & Application > higher-order functions 1`] = `
[
  {
    "codegenJS": "",
    "elaborated": "λ(f: Π(t2: Num) -> Num) -> λ(g: Π(t4: Num) -> Num) -> λ(x: Num) -> f (g x)",
    "error": "Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"compose"}
[3] lambda {"variable":"f","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [7]
  :env -> [18]
[4] pi {"variable":"t2","icit":"Explicit","level":1}
  :annotation -> [5]
  :body -> [6]
[5] lit {"value":{"type":"Atom","value":"Num"}}
[6] lit {"value":{"type":"Atom","value":"Num"}}
[7] lambda {"variable":"g","icit":"Explicit","level":2}
  :annotation -> [8]
  :body -> [11]
  :env -> [19]
[8] pi {"variable":"t4","icit":"Explicit","level":2}
  :annotation -> [9]
  :body -> [10]
[9] lit {"value":{"type":"Atom","value":"Num"}}
[10] lit {"value":{"type":"Atom","value":"Num"}}
[11] lambda {"variable":"x","icit":"Explicit","level":3}
  :annotation -> [12]
  :body -> [13]
  :env -> [20]
[12] lit {"value":{"type":"Atom","value":"Num"}}
[13] app {"icit":"Explicit"}
  :arg -> [15]
  :func -> [14]
[14] var:bound {"index":2}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [11] {"level":3}
[15] app {"icit":"Explicit"}
  :arg -> [17]
  :func -> [16]
[16] var:bound {"index":1}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [11] {"level":3}
[17] var:bound {"index":0}
  :refers_to -> [11]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
  :scope -> [11] {"level":3}
[18] env
[19] env
  :capture -> [3] {"index":0}
[20] env
  :capture -> [3] {"index":0}
  :capture -> [7] {"index":1}
[21] closure
  :body -> [3]
  :env -> [18]
[22] closure
  :body -> [7]
  :env -> [19]
[23] closure
  :body -> [11]
  :env -> [20]",
    "ivl": "(forall ((x Real)) (= x x))",
    "kind": "let",
    "mir": "",
    "name": "compose",
    "normalized": "λ(f: Π(t2: Num) -> (closure: Num -| Γ: t2)) ->
  (closure: λ(g: Π(t4: Num) -> Num) -> λ(x: Num) -> f (g x) -| Γ: f)",
    "solverTrace": "=== Formula ===
  (forall ((x Real)) (= x x))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  x=x -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Π(t1: Π(t2: Num) -> Num) -> Π(t3: Π(t4: Num) -> Num) -> Π(t5: Num) -> Num",
  },
  {
    "codegenJS": "function main() {
  const v0 = closure_13;
  return v0;
}

function closure_13(x) {
  const v0 = 1;
  const v1 = (x + v0);
  return v1;
}
return main();
",
    "elaborated": "(λ(x: Num) -> FFI.$add x 1 : Π(x: Num) ->
  <ω> Num [| λ(r: Num) -> FFI.$eq r (FFI.$add x 1) |])",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"add1"}
[3] lambda {"variable":"x","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [11]
  :env -> [12]
[4] lit {"value":{"type":"Atom","value":"Num"}}
[7] var:foreign {"name":"$add","arity":2}
[9] var:bound {"index":0}
  :next -> [10]
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[10] lit {"value":{"type":"Num","value":1}}
[11] primop {"op":"$add"}
  :arg -> [9] {"index":0}
  :arg -> [10] {"index":1}
  :callee -> [7]
[12] env
[13] closure
  :body -> [3]
  :env -> [12]",
    "ivl": "(and
  (forall ((x Real))
    (and
      (= x x)
      (forall ((x Real))
        (=>
          (= x x)
          (forall ((y Real))
            (=>
              (= y 1)
              (forall ((r Real)) (=> (= r (+ x 1)) (= r (+ x 1))))))))))
  (forall ((x Real)) (forall ((r Real)) (=> (= r (+ x 1)) (= r (+ x 1))))))",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &closure_13
      return v0
  fn closure_13(x) entry=entry
    entry:
      let v0 = 1
      let v1 = +(x, v0)
      return v1",
    "name": "add1",
    "normalized": "λ(x: Num) -> (closure: FFI.$add x 1 -| Γ: x)",
    "solverTrace": "=== Formula ===
  (and
    (forall ((x Real))
      (and
        (= x x)
        (forall ((x Real))
          (=>
            (= x x)
            (forall ((y Real))
              (=>
                (= y 1)
                (forall ((r Real)) (=> (= r (+ x 1)) (= r (+ x 1))))))))))
    (forall ((x Real)) (forall ((r Real)) (=> (= r (+ x 1)) (= r (+ x 1))))))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  x=x -> residual
  x=1 -> residual
  y=x -> residual
  y=1 -> residual
  r=x -> residual
  r=1 -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Π(x: Num) -> <ω> Num [| λ(r: Num) -> FFI.$eq r (FFI.$add x 1) |]",
  },
  {
    "codegenJS": "function main() {
  const v0 = closure_13;
  return v0;
}

function closure_13(x) {
  const v0 = 5;
  const v1 = (x + v0);
  return v1;
}
return main();
",
    "elaborated": "(λ(x: Num) -> FFI.$add x 5 : Π(x: Num) ->
  <ω> Num [| λ(r: Num) -> FFI.$eq r (FFI.$add x 5) |])",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"add5"}
[3] lambda {"variable":"x","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [11]
  :env -> [12]
[4] lit {"value":{"type":"Atom","value":"Num"}}
[7] var:foreign {"name":"$add","arity":2}
[9] var:bound {"index":0}
  :next -> [10]
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[10] lit {"value":{"type":"Num","value":5}}
[11] primop {"op":"$add"}
  :arg -> [9] {"index":0}
  :arg -> [10] {"index":1}
  :callee -> [7]
[12] env
[13] closure
  :body -> [3]
  :env -> [12]",
    "ivl": "(and
  (forall ((x Real))
    (and
      (= x x)
      (forall ((x Real))
        (=>
          (= x x)
          (forall ((y Real))
            (=>
              (= y 5)
              (forall ((r Real)) (=> (= r (+ x 5)) (= r (+ x 5))))))))))
  (forall ((x Real)) (forall ((r Real)) (=> (= r (+ x 5)) (= r (+ x 5))))))",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &closure_13
      return v0
  fn closure_13(x) entry=entry
    entry:
      let v0 = 5
      let v1 = +(x, v0)
      return v1",
    "name": "add5",
    "normalized": "λ(x: Num) -> (closure: FFI.$add x 5 -| Γ: x)",
    "solverTrace": "=== Formula ===
  (and
    (forall ((x Real))
      (and
        (= x x)
        (forall ((x Real))
          (=>
            (= x x)
            (forall ((y Real))
              (=>
                (= y 5)
                (forall ((r Real)) (=> (= r (+ x 5)) (= r (+ x 5))))))))))
    (forall ((x Real)) (forall ((r Real)) (=> (= r (+ x 5)) (= r (+ x 5))))))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  x=x -> residual
  x=5 -> residual
  y=x -> residual
  y=5 -> residual
  r=x -> residual
  r=5 -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Π(x: Num) -> <ω> Num [| λ(r: Num) -> FFI.$eq r (FFI.$add x 5) |]",
  },
  {
    "codegenJS": "function main() {
  const v0 = closure_13;
  return v0;
}

function closure_13(x) {
  const v0 = 2;
  const v1 = (x * v0);
  return v1;
}
return main();
",
    "elaborated": "(λ(x: Num) -> FFI.$mul x 2 : Π(x: Num) ->
  <ω> Num [| λ(r: Num) -> FFI.$eq r (FFI.$mul x 2) |])",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"double"}
[3] lambda {"variable":"x","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [11]
  :env -> [12]
[4] lit {"value":{"type":"Atom","value":"Num"}}
[7] var:foreign {"name":"$mul","arity":2}
[9] var:bound {"index":0}
  :next -> [10]
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[10] lit {"value":{"type":"Num","value":2}}
[11] primop {"op":"$mul"}
  :arg -> [9] {"index":0}
  :arg -> [10] {"index":1}
  :callee -> [7]
[12] env
[13] closure
  :body -> [3]
  :env -> [12]",
    "ivl": "(and
  (forall ((x Real))
    (and
      (= x x)
      (forall ((x Real))
        (=>
          (= x x)
          (forall ((y Real))
            (=>
              (= y 2)
              (forall ((r Real)) (=> (= r (* x 2)) (= r (* x 2))))))))))
  (forall ((x Real)) (forall ((r Real)) (=> (= r (* x 2)) (= r (* x 2))))))",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &closure_13
      return v0
  fn closure_13(x) entry=entry
    entry:
      let v0 = 2
      let v1 = *(x, v0)
      return v1",
    "name": "double",
    "normalized": "λ(x: Num) -> (closure: FFI.$mul x 2 -| Γ: x)",
    "solverTrace": "=== Formula ===
  (and
    (forall ((x Real))
      (and
        (= x x)
        (forall ((x Real))
          (=>
            (= x x)
            (forall ((y Real))
              (=>
                (= y 2)
                (forall ((r Real)) (=> (= r (* x 2)) (= r (* x 2))))))))))
    (forall ((x Real)) (forall ((r Real)) (=> (= r (* x 2)) (= r (* x 2))))))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  x=x -> residual
  x=2 -> residual
  y=x -> residual
  y=2 -> residual
  r=x -> residual
  r=2 -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Π(x: Num) -> <ω> Num [| λ(r: Num) -> FFI.$eq r (FFI.$mul x 2) |]",
  },
  {
    "codegenJS": "function main() {
  const v0 = compose;
  const v1 = double;
  const v2 = v0(v1);
  const v3 = add1;
  const v4 = v2(v3);
  return v4;
}
return main();
",
    "elaborated": "compose double add1",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"add1ThenDouble"}
[3] app {"icit":"Explicit"}
  :arg -> [10]
  :func -> [4]
[4] app {"icit":"Explicit"}
  :arg -> [8]
  :func -> [6]
[5] var:free {"name":"compose"}
[6] var:ref {"name":"compose"}
  :refers_to -> [5]
  :scope -> [2] {"level":0}
[7] var:free {"name":"double"}
[8] var:ref {"name":"double"}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
[9] var:free {"name":"add1"}
[10] var:ref {"name":"add1"}
  :refers_to -> [9]
  :scope -> [2] {"level":0}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = compose
      let v1 = double
      let v2 = call *v0(v1)
      let v3 = add1
      let v4 = call *v2(v3)
      return v4",
    "name": "add1ThenDouble",
    "normalized": "λ(x: Num) -> (closure: f (g x) -| Γ: x; g; f; compose)",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Π(t5: Num) -> Num",
  },
]
`;

exports[`Language Tour — Functions & Application > lambda expressions 1`] = `
[
  {
    "codegenJS": "function main() {
  const v0 = closure_7;
  return v0;
}

function closure_7(x) {
  return x;
}
return main();
",
    "elaborated": "λ(x: Num) -> x",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"identity"}
[3] lambda {"variable":"x","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [6]
[4] lit {"value":{"type":"Atom","value":"Num"}}
[5] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[6] env
[7] closure
  :body -> [3]
  :env -> [6]",
    "ivl": "(forall ((x Real)) (= x x))",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &closure_7
      return v0
  fn closure_7(x) entry=entry
    entry:
      return x",
    "name": "identity",
    "normalized": "λ(x: Num) -> (closure: x -| Γ: x)",
    "solverTrace": "=== Formula ===
  (forall ((x Real)) (= x x))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  x=x -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Π(t1: Num) -> Num",
  },
  {
    "codegenJS": "",
    "elaborated": "λ(x: Num) -> λ(y: String) -> x",
    "error": "Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures; Bridge: closure capture not yet implemented for curried returns — nested closures reference outer captures",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"const"}
[3] lambda {"variable":"x","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [8]
[4] lit {"value":{"type":"Atom","value":"Num"}}
[5] lambda {"variable":"y","icit":"Explicit","level":2}
  :annotation -> [6]
  :body -> [7]
  :env -> [9]
[6] lit {"value":{"type":"Atom","value":"String"}}
[7] var:bound {"index":1}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [5] {"level":2}
[8] env
[9] env
  :capture -> [3] {"index":0}
[10] closure
  :body -> [3]
  :env -> [8]
[11] closure
  :body -> [5]
  :env -> [9]",
    "ivl": "(forall ((x Real)) (forall ((y String)) (= x x)))",
    "kind": "let",
    "mir": "",
    "name": "const",
    "normalized": "λ(x: Num) -> (closure: λ(y: String) -> x -| Γ: x)",
    "solverTrace": "=== Formula ===
  (forall ((x Real)) (forall ((y String)) (= x x)))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  x=x -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Π(t2: Num) -> Π(t3: String) -> Num",
  },
]
`;

exports[`Language Tour — Statement Blocks > block with local bindings 1`] = `
[
  {
    "codegenJS": "function main() {
  const v0 = closure_24;
  return v0;
}

function closure_24(doubled, added, x) {
  const v0 = 2;
  const v1 = (x * v0);
  const doubled2 = v1;
  const v3 = 10;
  const v4 = (doubled2 + v3);
  const added5 = v4;
  return added5;
}
return main();
",
    "elaborated": "λ(x: Num) ->
  {
    let doubled
      : <ω> Num [| λ(r: Num) ->
        (closure: FFI.$eq r (FFI.$mul x y) -| Γ: r; y; x) |]
      = FFI.$mul x 2;
    let added
      : <ω> Num [| λ(r: Num) ->
        (closure: FFI.$eq r (FFI.$add x y) -| Γ: r; y; x) |]
      = FFI.$add doubled 10;
    return added;
  }",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"compute"}
[3] lambda {"variable":"x","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [23]
[4] lit {"value":{"type":"Atom","value":"Num"}}
[5] block
  :return -> [20]
  :stmt -> [6] {"index":0}
  :stmt -> [13] {"index":1}
[6] stmt:let {"variable":"doubled"}
  :next -> [13]
  :value -> [21]
[9] var:foreign {"name":"$mul","arity":2}
[11] var:bound {"index":1}
  :next -> [12]
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [6] {"level":2}
[12] lit {"value":{"type":"Num","value":2}}
[13] stmt:let {"variable":"added"}
  :value -> [22]
[16] var:foreign {"name":"$add","arity":2}
[18] var:bound {"index":1}
  :next -> [19]
  :refers_to -> [6]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [6] {"level":2}
  :scope -> [13] {"level":3}
[19] lit {"value":{"type":"Num","value":10}}
[20] var:bound {"index":0}
  :refers_to -> [13]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [6] {"level":2}
  :scope -> [13] {"level":3}
[21] primop {"op":"$mul"}
  :arg -> [11] {"index":0}
  :arg -> [12] {"index":1}
  :callee -> [9]
[22] primop {"op":"$add"}
  :arg -> [18] {"index":0}
  :arg -> [19] {"index":1}
  :callee -> [16]
[23] env
  :capture -> [6] {"index":0}
  :capture -> [13] {"index":1}
[24] closure
  :body -> [3]
  :env -> [23]",
    "ivl": "(forall ((x Real))
  (forall ((doubled Real))
    (=>
      (= doubled (* doubled 2))
      (and
        (= x x)
        (forall ((x Real))
          (=>
            (= x x)
            (forall ((y Real))
              (=>
                (= y 2)
                (forall ((r Real)) (=> (= r (* x 2)) (= r (* doubled 2))))))))
        (forall ((added Real))
          (=>
            (= added (+ (* doubled 2) 10))
            (and
              (= doubled (* doubled 2))
              (= doubled 2)
              (forall ((x Real))
                (=>
                  (and (= x (* doubled 2)) (= x 2))
                  (forall ((y Real))
                    (=>
                      (= y 10)
                      (forall ((r Real))
                        (=>
                          (= r (+ doubled 10))
                          (= r (+ (* doubled 2) 10))))))))
              (= added (+ (* doubled 2) 10))
              (= added added))))))))",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &closure_24
      return v0
  fn closure_24(doubled, added, x) entry=entry
    entry:
      let v0 = 2
      let v1 = *(x, v0)
      let doubled2 = v1
      let v3 = 10
      let v4 = +(doubled2, v3)
      let added5 = v4
      return added5",
    "name": "compute",
    "normalized": "λ(x: Num) ->
  (closure: {
    let doubled
      : <ω> Num [| λ(r: Num) ->
        (closure: FFI.$eq r (FFI.$mul x y) -| Γ: r; y; x) |]
      = FFI.$mul x 2;
    let added
      : <ω> Num [| λ(r: Num) ->
        (closure: FFI.$eq r (FFI.$add x y) -| Γ: r; y; x) |]
      = FFI.$add doubled 10;
    return added;
  } -| Γ: x)",
    "solverTrace": "=== Formula ===
  (forall ((x Real))
    (forall ((doubled Real))
      (=>
        (= doubled (* doubled 2))
        (and
          (= x x)
          (forall ((x Real))
            (=>
              (= x x)
              (forall ((y Real))
                (=>
                  (= y 2)
                  (forall ((r Real)) (=> (= r (* x 2)) (= r (* doubled 2))))))))
          (forall ((added Real))
            (=>
              (= added (+ (* doubled 2) 10))
              (and
                (= doubled (* doubled 2))
                (= doubled 2)
                (forall ((x Real))
                  (=>
                    (and (= x (* doubled 2)) (= x 2))
                    (forall ((y Real))
                      (=>
                        (= y 10)
                        (forall ((r Real))
                          (=>
                            (= r (+ doubled 10))
                            (= r (+ (* doubled 2) 10))))))))
                (= added (+ (* doubled 2) 10))
                (= added added))))))))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  x=doubled -> residual
  x=2 -> residual
  x=x -> residual
  x=10 -> residual
  x=added -> residual
  doubled=doubled -> residual
  doubled=2 -> residual
  doubled=x -> residual
  doubled=10 -> residual
  doubled=added -> residual
  y=doubled -> residual
  y=2 -> residual
  y=x -> residual
  y=10 -> tautology
  y=added -> residual
  r=doubled -> residual
  r=2 -> residual
  r=x -> residual
  r=10 -> residual
  r=added -> residual
  added=doubled -> residual
  added=2 -> residual
  added=x -> residual
  added=10 -> residual
  added=added -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Π(t1: Num) -> Num",
  },
  {
    "codegenJS": "function main() {
  const v0 = compute;
  const v1 = 5;
  const v2 = v0(v1);
  return v2;
}
return main();
",
    "elaborated": "compute 5",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"result"}
[3] app {"icit":"Explicit"}
  :arg -> [6]
  :func -> [5]
[4] var:free {"name":"compute"}
[5] var:ref {"name":"compute"}
  :refers_to -> [4]
  :scope -> [2] {"level":0}
[6] lit {"value":{"type":"Num","value":5}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = compute
      let v1 = 5
      let v2 = call *v0(v1)
      return v2",
    "name": "result",
    "normalized": "20",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Num",
  },
]
`;

exports[`Language Tour — Statement Blocks > side effects in blocks 1`] = `
[
  {
    "kind": "foreign",
    "name": "print",
  },
  {
    "kind": "foreign",
    "name": "stringify",
  },
  {
    "codegenJS": "function main() {
  const v0 = closure_34;
  return v0;
}

function closure_34(result, x) {
  const v0 = "Computing...";
  const v1 = print(v0);
  const v2 = 2;
  const v3 = (x * v2);
  const result4 = v3;
  const v6 = stringify(v5, result4);
  const v7 = print(v6);
  return result4;
}
return main();
",
    "elaborated": "λ(x: Num) ->
  {
    FFI.print "Computing...";
    let result
      : <ω> Num [| λ(r: Num) ->
        (closure: FFI.$eq r (FFI.$mul x y) -| Γ: r; y; x) |]
      = FFI.$mul x 2;
    FFI.print
      (FFI.stringify @<ω> Num [| λ(r: Num) -> FFI.$eq r (FFI.$mul x 2) |]
        result);
    return result;
  }",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"debug"}
[3] lambda {"variable":"x","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [33]
[4] lit {"value":{"type":"Atom","value":"Num"}}
[5] block
  :return -> [28]
  :stmt -> [6] {"index":0}
  :stmt -> [11] {"index":1}
  :stmt -> [18] {"index":2}
[6] stmt:expr
  :next -> [11]
  :value -> [29]
[8] var:foreign {"name":"print","arity":1}
[10] lit {"value":{"type":"String","value":"Computing..."}}
[11] stmt:let {"variable":"result"}
  :next -> [18]
  :value -> [30]
[14] var:foreign {"name":"$mul","arity":2}
[16] var:bound {"index":1}
  :next -> [17]
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [11] {"level":2}
[17] lit {"value":{"type":"Num","value":2}}
[18] stmt:expr
  :value -> [31]
[23] var:foreign {"name":"stringify","arity":2}
[25] modal {"quantity":"Many"}
  :next -> [27]
  :term -> [26]
[26] lit {"value":{"type":"Atom","value":"Num"}}
[27] var:bound {"index":0}
  :refers_to -> [11]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [11] {"level":2}
[28] var:bound {"index":0}
  :refers_to -> [11]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [11] {"level":2}
[29] external {"name":"print","arity":1,"args":1,"saturated":true}
  :arg -> [10] {"index":0}
  :callee -> [8]
[30] primop {"op":"$mul"}
  :arg -> [16] {"index":0}
  :arg -> [17] {"index":1}
  :callee -> [14]
[31] external {"name":"print","arity":1,"args":1,"saturated":true}
  :arg -> [32] {"index":0}
  :callee -> [8]
[32] external {"name":"stringify","arity":2,"args":2,"saturated":true}
  :arg -> [25] {"index":0}
  :arg -> [27] {"index":1}
  :callee -> [23]
[33] env
  :capture -> [11] {"index":0}
[34] closure
  :body -> [3]
  :env -> [33]",
    "ivl": "(forall ((x Real))
  (forall ((result Real))
    (=>
      (= result (* result 2))
      (and
        (= x x)
        (forall ((x Real))
          (=>
            (= x x)
            (forall ((y Real))
              (=>
                (= y 2)
                (forall ((r Real)) (=> (= r (* x 2)) (= r (* result 2))))))))
        (= result (* result 2))
        (= result 2)
        (forall ((r Real)) (=> (and (= r (* result 2)) (= r 2)) (= r (* x 2))))
        (= result (* result 2))
        (= result 2)))))",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = &closure_34
      return v0
  fn closure_34(result, x) entry=entry
    entry:
      let v0 = "Computing..."
      let v1 = call print(v0)
      let v2 = 2
      let v3 = *(x, v2)
      let result4 = v3
      let v6 = call stringify(v5, result4)
      let v7 = call print(v6)
      return result4",
    "name": "debug",
    "normalized": "λ(x: Num) ->
  (closure: {
    FFI.print "Computing...";
    let result
      : <ω> Num [| λ(r: Num) ->
        (closure: FFI.$eq r (FFI.$mul x y) -| Γ: r; y; x) |]
      = FFI.$mul x 2;
    FFI.print
      (FFI.stringify @<ω> Num [| λ(r: Num) -> FFI.$eq r (FFI.$mul x 2) |]
        result);
    return result;
  } -| Γ: x)",
    "solverTrace": "=== Formula ===
  (forall ((x Real))
    (forall ((result Real))
      (=>
        (= result (* result 2))
        (and
          (= x x)
          (forall ((x Real))
            (=>
              (= x x)
              (forall ((y Real))
                (=>
                  (= y 2)
                  (forall ((r Real)) (=> (= r (* x 2)) (= r (* result 2))))))))
          (= result (* result 2))
          (= result 2)
          (forall ((r Real)) (=> (and (= r (* result 2)) (= r 2)) (= r (* x 2))))
          (= result (* result 2))
          (= result 2)))))

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]

[quantifier] round 0: 0 lemmas
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[mbqi] round 0: 0 lemmas
  x=result -> residual
  x=2 -> residual
  x=x -> residual
  result=result -> residual
  result=2 -> residual
  result=x -> residual
  y=result -> residual
  y=2 -> residual
  y=x -> residual
  r=result -> residual
  r=2 -> residual
  r=x -> residual
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1",
    "type": "Π(t3: Num) -> Num",
  },
]
`;
